k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - HOSTNAME_PLACEHOLDER
    secretName: taskmanager-tls
  rules:
  - host: HOSTNAME_PLACEHOLDER
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend
            port: 
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
